# hospital-service

./: Dockerfile  README.md  design.md  instructions.md  pyproject.toml
data/: Hospital_General_Information.csv
hospital_service/: config.py  main.py  service.py  validation.py
hospital_service/data/: hospital_general_info_loader.py  hospital_measures_loader.py  load_csv.py  loader.py
hospital_service/data/general_info/: hospital_general_info_loader.py
hospital_service/data/measures/: hospital_measures.py  hospital_measures_loader.py
hospital_service/models/: hospital.py  hospital_general_info.py  rank_states_by_hospital_measure.py  state_rank_by_hospital_measure.py
tests/: test_hospital_service.py  test_main.py
tests/data/: sample-measures.csv  test-hospital-info.csv  test_hospital_general_info_loader.py  test_hospital_measures_loader.py  test_loader.py
tests/data/general_info/: test_hospital_general_info_loader.py
tests/data/measures/: sample-measures-op-22-patients-affected.csv  test_hospital_measures_loader.py
tests/service/: test-hospital-info-filters-score.csv  test-hospital-info-filters.csv  test-hospital-info-state.csv  test-hospital-info.csv  test-measures-filters-score.csv  test-measures-filters.csv  test-measures-op-22-score-not-available.csv  test-measures.csv  test_service.py
