[tool.poetry]
name = "hospital-service"
version = "0.1.0"
description = ""
authors = ["Zach Goodman <zjgoodman95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
requests = "^2.26.0"
pandas = "^1.3.4"
wheel = "^0.37.0"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
